--- a/angular-bookstore/src/styles.css
+++ b/angular-bookstore/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@font-face {
+    font-family: 'Roboto';
+    src: url(/assets/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
+}
+
+h1 {
+    font-family: 'Roboto';
+}
+
+body {
+    padding-top: 56px !important;
+}
+
+body,
+html {
+    height: 100%;
+}
+
+.footer {
+    position: absolute;
+    /* bottom: 10px; */
+    height: 60px;
+}
+
+.wrapper {
+    min-height: 100%;
+    position: relative;
+}
+
+.content {
+    padding-bottom: 100px;
+}
