--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -1,70 +1,6 @@
 <div class="wrapper">
-    <!-- Navigation -->
-    <div class="content">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">Online Bookstore</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <input type="text" class="form-control" placeholder="Search books">
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-primary" type="submit">Search</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
-        <!-- Page Content -->
-        <div class="container">
-            <br />
-            <div class="row">
-
-                <div class="col-lg-3">
-
-                    <div class="list-group">
-                        <a href="#" class="list-group-item">Category 1</a>
-                        <a href="#" class="list-group-item">Category 2</a>
-                        <a href="#" class="list-group-item">Category 3</a>
-                    </div>
-
-                </div>
-                <!-- /.col-lg-3 -->
-                <div class="col">
-                    <app-book-list></app-book-list>
-                </div>
-
-                <!-- /.col-lg-9 -->
-
-            </div>
-            <!-- /.row -->
-
-        </div>
-        <!-- /.container -->
-    </div>
+    <router-outlet></router-outlet>
 
     <!-- Footer -->
     <footer class="py-5 footer">
