--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -1,18 +1,82 @@
-<table border="1" class="table">
-    <thead>
-        <tr>
-            <td></td>
-            <td>Name</td>
-            <td>Description</td>
-            <td>Price</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let book of books">
-            <td><img [src]="book.imageUrl" alt="" height="60"></td>
-            <td>{{book.name}}</td>
-            <td>{{book.description}}</td>
-            <td>{{book.unitPrice | currency: 'INR'}}</td>
-        </tr>
-    </tbody>
-</table>
+<!-- Navigation -->
+<div class="content">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Online Bookstore</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-8">
+                        <input type="text" class="form-control" placeholder="Search books">
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </div>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+        <br />
+        <div class="row">
+
+            <div class="col-lg-3">
+
+                <div class="list-group">
+                    <a routerLink="/category/1" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Web Development</a>
+                    <a routerLink="/category/2" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Programming</a>
+                    <a routerLink="/category/3" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Database</a>
+                </div>
+
+            </div>
+            <!-- /.col-lg-3 -->
+            <div class="col">
+                <div class="row">
+                    <div *ngFor="let book of books" class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <a href="#"><img class="card-img-top img-responsive" [src]="book.imageUrl" height="250px"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="#">{{book.name}}</a>
+                                </h4>
+                                <h5>{{book.unitPrice | currency: 'INR'}}</h5>
+                                <p class="card-text text-truncate">{{book.description}}</p>
+                            </div>
+                            <div class="card-footer">
+                                <button class="btn btn-primary float-right">Add To Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- /.col-lg-9 -->
+
+        </div>
+        <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+</div>
