--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -44,11 +44,7 @@
 
             <div class="col-lg-3">
 
-                <div class="list-group">
-                    <a routerLink="/category/1" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Web Development</a>
-                    <a routerLink="/category/2" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Programming</a>
-                    <a routerLink="/category/3" class="list-group-item" routerLinkActive="bg-primary text-white text-weight-bold">Database</a>
-                </div>
+                <app-book-category></app-book-category>
 
             </div>
             <!-- /.col-lg-3 -->
