--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -1,78 +1,41 @@
-<!-- Navigation -->
-<div class="content">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Online Bookstore</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-8">
-                        <input type="text" class="form-control" placeholder="Search books">
-                    </div>
-                    <div class="col-md-2">
-                        <button class="btn btn-primary" type="submit">Search</button>
-                    </div>
-                </div>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
+<!-- Page Content -->
+<div class="container">
+    <br />
+    <div class="row">
+
+        <div class="col-lg-3">
+
+            <app-book-category></app-book-category>
+
         </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-        <br />
-        <div class="row">
-
-            <div class="col-lg-3">
-
-                <app-book-category></app-book-category>
-
-            </div>
-            <!-- /.col-lg-3 -->
-            <div class="col">
-                <div class="row">
-                    <div *ngFor="let book of books" class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top img-responsive" [src]="book.imageUrl" height="250px"></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">{{book.name}}</a>
-                                </h4>
-                                <h5>{{book.unitPrice | currency: 'INR'}}</h5>
-                                <p class="card-text text-truncate">{{book.description}}</p>
-                            </div>
-                            <div class="card-footer">
-                                <button class="btn btn-primary float-right">Add To Cart</button>
-                            </div>
+        <!-- /.col-lg-3 -->
+        <div class="col">
+            <div class="row">
+                <div *ngFor="let book of books" class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a routerLink="/books/{{book.id}}"><img class="card-img-top img-responsive" [src]="book.imageUrl" height="250px"></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a routerLink="/books/{{book.id}}">{{book.name}}</a>
+                            </h4>
+                            <h5>{{book.unitPrice | currency: 'INR'}}</h5>
+                            <p class=" card-text text-truncate ">{{book.description}}</p>
+                        </div>
+                        <div class="card-footer ">
+                            <button class="btn btn-primary float-right ">Add To Cart</button>
                         </div>
                     </div>
                 </div>
+                <div *ngIf="books?.length==0 " class="col-md-12 alert alert-warning text-center ">
+                    No books found!
+                </div>
             </div>
-
-            <!-- /.col-lg-9 -->
-
         </div>
-        <!-- /.row -->
+
+        <!-- /.col-lg-9 -->
 
     </div>
-    <!-- /.container -->
+    <!-- /.row -->
+
 </div>
+<!-- /.container -->
