--- a/angular-bookstore/src/app/components/search-books/search-books.component.html
+++ b/angular-bookstore/src/app/components/search-books/search-books.component.html
@@ -1,10 +1,8 @@
-<div class="col-md-12">
-    <div class="row">
-        <div class="col-md-10">
-            <input #searchInput type="text" class="form-control" (keyup.enter)="search(searchInput.value)" placeholder="Search books">
-        </div>
-        <div class="col-md-2">
-            <button class="btn btn-primary" type="submit" (click)="search(searchInput.value)">Search</button>
+<div class="row">
+    <div class="col-md-12">
+        <div class="searchbar">
+            <input #searchInput class="search_input" type="text" (keyup.enter)="search(searchInput.value)" placeholder="Search books">
+            <a class="search_icon" (click)="search(searchInput.value)"><i class=" fa fa-search "></i></a>
         </div>
     </div>
 </div>
