Adding "Add to cart" feature.

--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -30,6 +30,7 @@
                     </ul>
                 </div>
             </div>
+            <app-cart-status></app-cart-status>
         </nav>
         <router-outlet></router-outlet>
     </div>
