--- a/angular-bookstore/src/app/components/book-details/book-details.component.html
+++ b/angular-bookstore/src/app/components/book-details/book-details.component.html
@@ -24,11 +24,10 @@
                     <hr />
                     <h6>Qty. Available: {{book?.unitsInStock}}</h6>
                     <hr />
-                    <a routerLink="/books" class="btn btn-success"><i class="fa fa-arrow-left" aria-hidden="true"></i>
-                        Back</a>
-                    <a routerLink="/books" class="btn btn-primary ml-1"><i class="fa fa-cart-plus"
-                            aria-hidden="true"></i> Add to
-                        Cart</a>
+                    <a class="btn btn-success text-white" (click)="goBack()">
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
+                    <a class="btn btn-primary text-white float-right" (click)="addToCart(book)">
+                        <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart</a>
                     <div class="row"></div>
                 </div>
             </div>
