--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -26,7 +26,9 @@
                             <p class=" card-text text-truncate ">{{book.description}}</p>
                         </div>
                         <div class="card-footer ">
-                            <button class="btn btn-primary float-right ">Add To Cart</button>
+                            <button class="btn btn-primary float-right" (click)="addToCart(book)">
+                                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add To Cart
+                            </button>
                         </div>
                     </div>
                 </div>
