--- a/angular-bookstore/src/app/components/search-books/search-books.component.css
+++ b/angular-bookstore/src/app/components/search-books/search-books.component.css
@@ -13,7 +13,8 @@
     caret-color: transparent;
     line-height: 40px;
     padding: 0 10px;
-    min-width: 300px;
+    max-width: 300px;
+    min-width: 200px;
 }
 
 .search_icon {
