--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -43,3 +43,6 @@
         </div>
     </footer>
 </div>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="line-scale">
+    <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
