--- a/angular-bookstore/src/app/components/cart-status/cart-status.component.html
+++ b/angular-bookstore/src/app/components/cart-status/cart-status.component.html
@@ -1,4 +1,4 @@
-<a class="btn btn-warning cart-status">
+<a routerLink="/cart-details" class="btn btn-warning cart-status">
     {{totalPrice | currency: 'INR'}}
     <span class="badge badge-light ml-2">{{totalQuantity}}</span>
     <span class="ml-2"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></span>
