--- a/angular-bookstore/src/app/components/book-list/book-list.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-list.component.html
@@ -13,14 +13,14 @@
             <div class="row">
                 <div *ngFor="let book of books" class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
-                        <a routerLink="/books/{{book.id}}">
+                        <a [routerLink]="'/books/' + book.id">
                             <div class="inner">
-                                <img class="card-img-top img-responsive" [src]="book.imageUrl" height="250px">
+                                <img class="card-img-top img-responsive" [src]="book?.imageUrl" height="250px">
                             </div>
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a routerLink="/books/{{book.id}}">{{book.name}}</a>
+                                <a [routerLink]="'/books/' + book.id">{{book.name}}</a>
                             </h4>
                             <h5>{{book.unitPrice | currency: 'INR'}}</h5>
                             <p class=" card-text text-truncate ">{{book.description}}</p>
